Updated notes, hand-ins and preamble

--- a/2019_20/CAP/homework-1/homework.tex
+++ b/2019_20/CAP/homework-1/homework.tex
@@ -1,12 +1,6 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
+\usepackage{homework-preamble}
+
 \title{CAP: Homework 1 (Workshop 71)}
 \author{Franz Miltz (UNN: s1971811)}
 \begin{document}
