--- a/2019_20/ILA/hand-in-3/hand-in.tex
+++ b/2019_20/ILA/hand-in-3/hand-in.tex
@@ -1,41 +1,19 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\geometry{tmargin=3cm, bmargin=3cm}
-\usepackage{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
+\usepackage{homework-preamble}
+
 \title{ILA: H3 (Workshop 08)}
 \author{Franz Miltz (UNN: S1971811)}
 \date{October 15, 2019}
 \begin{document}
 \maketitle
-This document will use the following notation:
-\begin{itemize}
-    \item $a$ may represent any scalar.
-    \item $\vec{a}=\begin{bmatrix}
-        a_1\\
-        \vdots\\
-        a_n
-    \end{bmatrix}$ may represent any vector.
-    \item $A=\begin{bmatrix}
-        a_{11} &\dots &a_{1n}\\
-        \vdots &\ddots &\vdots\\
-        a_{m1} &\dots &a_{mn}
-    \end{bmatrix}$ may represent any matrix.
-    \item $ab$ is a normal product of two scalars.
-    \item $a\vec{b}$ is a scalar multiplication of the vector $\vec{b}$ with the scalar $a$
-    \item $A\vec b$ is the matrix multiplication of the matrix $A$ with the vector $\vec b$
-\end{itemize}
 \section*{Q40}
-\subsection*{a)}
+\subsection*{(a)}
 We can just use $t=x_1$ to subsitute $t$ for $x_1$ in the equations for $x_2$ and $x_3$. Thus we get the following system:
 \begin{align*}
     -x_1+x_2=1\\
     x_1+x_3=2 
 \end{align*}
-\subsection*{b)}
+\subsection*{(b)}
 In the given equations we can subsitute $x_3$ for $s$ and $t$ for $x_1$.
 \begin{align*}
     x_2 = 1 + x_1\\
