--- a/2019_20/ILA/hand-in-5/hand-in.tex
+++ b/2019_20/ILA/hand-in-5/hand-in.tex
@@ -1,27 +1,11 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
+\usepackage{homework-preamble}
+
 \title{ILA: H2 (Workshop 08)}
 \author{Franz Miltz (UNN: s1971811)}
 \date{October 8, 2019}
 \begin{document}
 \maketitle
-This document will use the following notation:
-\begin{itemize}
-    \item $a$ may represent any scalar.
-    \item $A$ may represent or any matrix and $A^{-1}$ is its inverse.
-    \item $I_n$ is the $n\times n$ identity matrix and $I$ is the $n\times n$ identity matrix in the current context (mostly resulting from a multiplication of the form $AA^{-1}$).
-    \item $\begin{bmatrix}
-        a_{11} & a_{12}&\dots &a_{1n}\\
-        a_{21} & a_{22}&\dots &a_{2n}\\
-        \vdots & \vdots & \ddots & \vdots\\
-        a_{m1} & a_{m2} &\dots &a_{mn}
-    \end{bmatrix}$ is another representation of $A$
-\end{itemize}
 \section*{Q26}
 Let $A_1$, $A_2$ and $B$ be the following $2\times 2$ matrices:
 \begin{align*}
