--- a/2019_20/ILA/hand-in-7/hand-in.tex
+++ b/2019_20/ILA/hand-in-7/hand-in.tex
@@ -1,27 +1,11 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
+\usepackage{homework-preamble}
+
 \title{ILA: H7 (Workshop 08)}
 \author{Franz Miltz (UNN: s1971811)}
 \date{November 12, 2019}
 \begin{document}
 \maketitle
-This document will use the following notation:
-\begin{itemize}
-    \item $a$ may represent any scalar.
-    \item $\vec{a}$ may represent any vector.
-    \item $\begin{bmatrix}
-        a_1\\
-        \vdots\\
-        a_n
-    \end{bmatrix}$ is another representation of $\vec a$. 
-    \item $a\vec{b}$ is a scalar multiplication of the vector $\vec{b}$ with the scalar $a$
-    \item $T:\mathbb{R}^n\to\mathbb{R}^m$ is a transformation from $\mathbb{R}^n$ to $\mathbb{R}^m$.
-\end{itemize}
 \section*{Q8}
 We know that for $T$ to be linear we need the following to be true for every $k\in\mathbb{R}$ and $\vec u \in\mathbb{R}^n$. 
 \begin{align*}
