--- a/2019_20/ILA/hand-in-8/hand-in.tex
+++ b/2019_20/ILA/hand-in-8/hand-in.tex
@@ -1,30 +1,11 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage[english]{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
+\usepackage{homework-preamble}
+
 \title{ILA: H8 (Workshop 08)}
 \author{Franz Miltz (UNN: s1971811)}
 \date{November 19, 2019}
 \begin{document}
 \maketitle
-This document will use the following notation:
-\begin{itemize}
-    \item $a$ may represent any scalar.
-    \item $\vec{a}$ may represent any vector.
-    \item $\begin{bmatrix}
-        a_1\\
-        \vdots\\
-        a_n
-    \end{bmatrix}$ is another representation of $\vec a$. 
-    \item $a_i$ is the $i$th component of the vector $a$.
-    \item $A$ may represent any matrix.
-    \item $ab$ is a product of two scalars.
-    \item $a\vec{b}$ is a scalar multiplication of the vector $\vec{b}$ with the scalar $a$
-    \item $A\vec b$ is the matrix multiplication of the matrix $A$ with the vector $\vec b$
-\end{itemize}
 \section*{Dec 13: A4}
 The given statement is true. Proof:\\
 Let $A$ be an $n\times n$ matrix where
