--- a/2019_20/CAP/homework-5/homework.tex
+++ b/2019_20/CAP/homework-5/homework.tex
@@ -1,27 +1,9 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
+\usepackage{homework-preamble}
+
 \title{CAP: Homework 5 (Workshop 71)}
 \author{Franz Miltz (UNN: S1971811)}
-\DeclareMathOperator{\sech}{sech}
-\DeclareMathOperator{\csch}{csch}
-\DeclareMathOperator{\arccot}{\text{cot}^{-1}}
-\DeclareMathOperator{\arccsc}{\text{csc}^{-1}}
-\DeclareMathOperator{\arccosh}{\text{cosh}^{-1}}
-\DeclareMathOperator{\arcsinh}{\text{sinh}^{-1}}
-\DeclareMathOperator{\arctanh}{\text{tanh}^{-1}}
-\DeclareMathOperator{\arcsech}{\text{sech}^{-1}}
-\DeclareMathOperator{\arccsch}{\text{csch}^{-1}}
-\DeclareMathOperator{\arccoth}{\text{coth}^{-1}} 
-\DeclareMathOperator{\dom}{dom}
-\DeclareMathOperator{\range}{rng}
-\DeclareMathOperator{\st}{s.t.}
+
 \begin{document}
 \maketitle
 \section*{Question 1}
