--- a/2019_20/CAP/homework-9/homework.tex
+++ b/2019_20/CAP/homework-9/homework.tex
@@ -1,40 +1,13 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{amsthm}
-\usepackage{nicefrac}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
+\usepackage{homework-preamble}
 \title{CAP: Homework 9 (Workshop 71)}
 \author{Franz Miltz (UNN: S1971811)}
-\DeclareMathOperator{\sech}{sech}
-\DeclareMathOperator{\csch}{csch}
-\DeclareMathOperator{\arccot}{\text{cot}^{-1}}
-\DeclareMathOperator{\arccsc}{\text{csc}^{-1}}
-\DeclareMathOperator{\arccosh}{\text{cosh}^{-1}}
-\DeclareMathOperator{\arcsinh}{\text{sinh}^{-1}}
-\DeclareMathOperator{\arctanh}{\text{tanh}^{-1}}
-\DeclareMathOperator{\arcsech}{\text{sech}^{-1}}
-\DeclareMathOperator{\arccsch}{\text{csch}^{-1}}
-\DeclareMathOperator{\arccoth}{\text{coth}^{-1}} 
-\DeclareMathOperator{\dom}{dom}
-\DeclareMathOperator{\range}{rng}
-\newcommand*\lneg[1]{\overline{#1}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\st}{\text{ s.t. }}
-\newtheorem{claim}[section]{Claim}
 \begin{document}
 \maketitle
 \section*{Question 1}
-\subsection*{a)}
+\subsection*{(a)}
 You can find the sketch attached to this document.
-\subsection*{b)}
+\subsection*{(b)}
 \begin{align*}
   \frac{dy}{dx}=\frac{xy}{\sqrt{1-x}}
 \end{align*}
@@ -63,7 +36,7 @@ This may be rewritten as a function of $y$ in terms of $x$:
   y(x)=  ae^{\frac{2}{3}(x+2)\sqrt{1-x}}
 \end{align*}
 where $a=\pm e^C$.
-\subsection*{c)}
+\subsection*{(c)}
 Since $1>0$, we know that we have to find a solution where $y(x)>0$.\\
 To satisfy $y(0)=1$, we need the exponent to be $0$, i.e.
 \begin{align*}
