--- a/2019_20/ILA/hand-in-2/hand-in.tex
+++ b/2019_20/ILA/hand-in-2/hand-in.tex
@@ -1,33 +1,11 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
+\usepackage{homework-preamble}
+
 \title{ILA: H2 (Workshop 08)}
 \author{Franz Miltz (UNN: s1971811)}
 \date{October 8, 2019}
 \begin{document}
 \maketitle
-This document will use the following notation:
-\begin{itemize}
-    \item $a$ may represent any scalar.
-    \item $\vec{a}$ may represent any vector.
-    \item $\begin{bmatrix}
-        a_1\\
-        \vdots\\
-        a_n
-    \end{bmatrix}$ is another representation of $\vec a$. 
-    \item $a_i$ is the $i$th component of the vector $a$.
-    \item $A$ may represent any point in any vector space.
-    \item $O$ is the origin of any vector space.
-    \item $\vec{OA}=\vec{A}$ is a vector from $O$ to $A$ in the respective vector space.
-    \item $\vert\vec{a}\vert$ is the magnitude of the vector $\vec{a}$
-    \item $a\cdot b$ is a normal product of two scalars.
-    \item $a\cdot\vec{b}$ is a scalar multiplication of the vector $\vec{b}$
-    \item $\vec{a}\cdot\vec{b}$ is the scalar product of the vectors $\vec{a}$ and $\vec{b}$
-\end{itemize}
 \section*{Q17}
 We're looking at lines in $\mathbb{R}^2$ of following the form:
 \begin{align}
