--- a/2020_21/SVCDE/H7/homework.tex
+++ b/2020_21/SVCDE/H7/homework.tex
@@ -1,57 +1,23 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage[british]{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\usepackage{amsthm}
-\usepackage{changepage}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\newcommand*\lneg[1]{\overline{#1}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\st}{\text{ s.t. }}
-\newcommand{\p}{\partial }
-\newcommand{\di}{\iint\limits}
-\newcommand{\ti}{\iiint\limits}
-\newcommand{\grad}{\vec\nabla}
-\newcommand{\hs}{\hspace{0.7cm}}
-%newenvironment{claim}[1]{\noindent\emph{Claim.}\space#1}{}
-\newenvironment{claimproof}[1]{\par\noindent\emph{Proof.}\space#1}{\hfill $\blacksquare$}
-\newtheorem{claim}[section]{Claim}
-\newtheorem{lemma}{Lemma}[section]
-\DeclareMathOperator{\lub}{\text{LUB}}
-\DeclareMathOperator{\hcf}{hcf}
-\DeclareMathOperator{\lcm}{lcm}
-\setcounter{MaxMatrixCols}{20}
-\newcommand*\binco[2]{\begin{pmatrix}
-  #1\\#2
-\end{pmatrix}}
-\newcommand{\ih}{\widehat i}
-\newcommand{\jh}{\widehat j}
-\newcommand{\kh}{\widehat k}
-\newcommand{\K}{\mathcal{K}}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
-\renewcommand{\d}[1]{#1'}
-\renewcommand{\t}{\theta}
-\newenvironment{itpars}{\par\itshape}{\par}
-\newenvironment{itquote}{\begin{quote}\itshape}{\end{quote}\ignorespacesafterend}
+\usepackage{homework-preamble}
+
 \begin{document}
 \title{SVCDE: Hand-in 7}
 \author{Franz Miltz (UNN: S1971811)}
 \date{8 November 2020}
 \maketitle
+
+
 \section*{Question 1}
+
+
 We have 
 \begin{align*}
   \vec F = (1+2xy+y^2+yz^2)\ih + (x^2+e^y+2xy+xz^2)\jh + 2xyz\kh.
 \end{align*}
+
 \subsection*{(a) and (b)}
+
 Since finding a potential function $\phi$ such that $\vec F = \grad\phi$ 
 will show that $\vec F$ is conservative, we can solve (a) implicitly.
 To find a suitable $\phi$ we need to find anti-derivatives of all the components
@@ -72,7 +38,9 @@ Partial differentiation shows that
   \grad \phi = (1+2xy+y^2+yz^2)\ih + (x^2+e^y+2xy+xz^2)\jh + 2xyz\kh = \vec F.
 \end{align*}
 Thus $\vec F$ is conservative and $\phi$ is a potential function.
+
 \subsection*{(c)}
+
 We observe that $\vec F$ is conservative and thus the integral is independent of
 path. We therefore let $P$ be some smooth curve from $(0,0,0)$ to $(2,0,2)$ with the
 position vector $\vec s:\R\to\R^3$ such that $\vec s(a)=\vec 0$ and $\vec s(b)=2\ih + 2\kh$
@@ -89,7 +57,11 @@ Using this and applying the \emph{Fundamental Theorem of Line Integrals}, we fin
 \emph{Note: We don't specify all of $P$ because we're only interested in the start
 and end points. If required, we could define $P$ as the straight line between
 the two points of interest.}
+
+
 \section*{Question 2}
+
+
 Consider the plane $P$ where
 \begin{align*}
   \frac{x}{a}+\frac{y}{b}+\frac{z}{c}=1.
