--- a/2020_21/SVCDE/H3/homework.tex
+++ b/2020_21/SVCDE/H3/homework.tex
@@ -1,47 +1,16 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage[british]{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\usepackage{amsthm}
-\usepackage{changepage}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
+\usepackage{homework-preamble}
+
+\begin{document}
 \title{SVCDE: Hand-in 3}
 \author{Franz Miltz (UNN: S1971811)}
-\newcommand*\lneg[1]{\overline{#1}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\st}{\text{ s.t. }}
-\newcommand{\p}{\partial }
-%newenvironment{claim}[1]{\noindent\emph{Claim.}\space#1}{}
-\newenvironment{claimproof}[1]{\par\noindent\emph{Proof.}\space#1}{\hfill $\blacksquare$}
-\newtheorem{claim}[section]{Claim}
-\newtheorem{lemma}{Lemma}[section]
-\DeclareMathOperator{\lub}{\text{LUB}}
-\DeclareMathOperator{\hcf}{hcf}
-\DeclareMathOperator{\lcm}{lcm}
-\setcounter{MaxMatrixCols}{20}
-\newcommand*\binco[2]{\begin{pmatrix}
-  #1\\#2
-\end{pmatrix}}
-\newcommand{\ih}{\widehat i}
-\newcommand{\jh}{\widehat j}
-\newcommand{\kh}{\widehat k}
-\newcommand{\K}{\mathcal{K}}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
-\renewcommand{\d}[1]{#1'}
-\newenvironment{itpars}{\par\itshape}{\par}
-\newenvironment{itquote}{\begin{quote}\itshape}{\end{quote}\ignorespacesafterend}
-\begin{document}
 \date{11th October 2020}
 \maketitle
+
+
 \section*{Problem 1}
+
+
 We have
 \begin{align*}
   z &= f(x,y),\\
@@ -109,7 +78,11 @@ Now we see that $a(r)=1/r$ is required to get
   z_{rr} + \frac{1}{r}z_r + \frac{1}{r^2}z_r = z_{xx} + z_{yy}
 \end{align*}
 as desired.
+
+
 \section*{Question 2}
+
+
 Let $f(x,y)=x^2+y^2-2(x+y)$. Then we find its first order partial derivatives
 \begin{align*}
   \frac{\p f}{\p x}=2x-2 \text{\hspace{0.5cm}and\hspace{0.5cm}}
