--- a/2020_21/SVCDE/H5/homework.tex
+++ b/2020_21/SVCDE/H5/homework.tex
@@ -1,51 +1,17 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage[british]{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\usepackage{amsthm}
-\usepackage{changepage}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\newcommand*\lneg[1]{\overline{#1}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\st}{\text{ s.t. }}
-\newcommand{\p}{\partial }
-\newcommand{\di}{\iint\limits}
-\newcommand{\ti}{\iiint\limits}
-\newcommand{\grad}{\vec\nabla}
-%newenvironment{claim}[1]{\noindent\emph{Claim.}\space#1}{}
-\newenvironment{claimproof}[1]{\par\noindent\emph{Proof.}\space#1}{\hfill $\blacksquare$}
-\newtheorem{claim}[section]{Claim}
-\newtheorem{lemma}{Lemma}[section]
-\DeclareMathOperator{\lub}{\text{LUB}}
-\DeclareMathOperator{\hcf}{hcf}
-\DeclareMathOperator{\lcm}{lcm}
-\setcounter{MaxMatrixCols}{20}
-\newcommand*\binco[2]{\begin{pmatrix}
-  #1\\#2
-\end{pmatrix}}
-\newcommand{\ih}{\widehat i}
-\newcommand{\jh}{\widehat j}
-\newcommand{\kh}{\widehat k}
-\newcommand{\K}{\mathcal{K}}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
-\renewcommand{\d}[1]{#1'}
-\renewcommand{\t}{\theta}
-\newenvironment{itpars}{\par\itshape}{\par}
-\newenvironment{itquote}{\begin{quote}\itshape}{\end{quote}\ignorespacesafterend}
+\usepackage{homework-preamble}
+
+
 \begin{document}
 \title{SVCDE: Hand-in 5}
 \author{Franz Miltz (UNN: S1971811)}
 \date{25th October 2020}
 \maketitle
+
+
 \section*{Question 1}
+
+
 Observe that we can write the height of the volume $V$ in terms of $x$ and $y$ as 
 \begin{align*}
   h(x,y) = \sqrt{x^2 + y^2}
@@ -60,26 +26,30 @@ with
   D = \{(x,y) : x^2 + y^2 = 2x\}.
 \end{align*}
 We can see that $D$ is the unit circle around the point $(1,0)$. Therefore we can 
-change to polar coordinates with $x=r\cos\t$ and $y=r\sin\t$ to find
+change to polar coordinates with $x=r\cos\theta$ and $y=r\sin\theta$ to find
 \begin{align*}
-  V = \int_{-\pi/2}^{\pi/2}\int_0^{2\cos\t} r^2\: dr\,d\t.
+  V = \int_{-\pi/2}^{\pi/2}\int_0^{2\cos\theta} r^2\: dr\,d\theta.
 \end{align*}
-We can simplify a bit by observing that $z(r,\t)=z(r,-\t)$. This lets us write
+We can simplify a bit by observing that $z(r,\theta)=z(r,-\theta)$. This lets us write
 \begin{align*}
-  V = 2\int_{0}^{\pi/2}\int_0^{2\cos \t} r^2\: dr\,d\t.
+  V = 2\int_{0}^{\pi/2}\int_0^{2\cos \theta} r^2\: dr\,d\theta.
 \end{align*}
 Solving gives 
 \begin{align*}
-  V &= 2\int_0^{\pi/2}\left[\frac{1}{3}r^3\right]_0^{2\cos \t}d\t
-  =\frac{16}{3}\int_0^{\pi/2}\cos^3 \t\:d\t\\
-  &=\frac{16}{3}\left[\sin \t - \frac{1}{3}\sin^3 \t\right]_0^{\pi/2}
+  V &= 2\int_0^{\pi/2}\left[\frac{1}{3}r^3\right]_0^{2\cos \theta}d\theta
+  =\frac{16}{3}\int_0^{\pi/2}\cos^3 \theta\:d\theta\\
+  &=\frac{16}{3}\left[\sin \theta - \frac{1}{3}\sin^3 \theta\right]_0^{\pi/2}
   =\frac{16}{3}\left(\frac{2}{3}\right) = \frac{32}{9}
 \end{align*}
 as required.
+
+
 \section*{Question 2}
+
+
 We have to solve
 \begin{align*}
-  I = \ti_D \left(\frac{z}{1-|x|y}\right)^2 dV
+  I = \theta i_D \left(\frac{z}{1-|x|y}\right)^2 dV
 \end{align*}
 with $D=\{(x,y,z) : x\in(-1,2), y\in(-1,0), z\in(0,3)\}$. Since all the limits are constants,
 we can use \emph{Fubini's Theorem} and evaluate
