--- a/2020_21/SVCDE/H6/homework.tex
+++ b/2020_21/SVCDE/H6/homework.tex
@@ -1,52 +1,16 @@
 \documentclass{article}
-\usepackage[a4paper]{geometry}
-\usepackage[british]{babel}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
-\usepackage{nicefrac}
-\usepackage{amsthm}
-\usepackage{changepage}
-\geometry{tmargin=2cm, bmargin=3cm}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
-\newcommand*\lneg[1]{\overline{#1}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\N}{\mathbb{N}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\st}{\text{ s.t. }}
-\newcommand{\p}{\partial }
-\newcommand{\di}{\iint\limits}
-\newcommand{\ti}{\iiint\limits}
-\newcommand{\grad}{\vec\nabla}
-\newcommand{\hs}{\hspace{0.7cm}}
-%newenvironment{claim}[1]{\noindent\emph{Claim.}\space#1}{}
-\newenvironment{claimproof}[1]{\par\noindent\emph{Proof.}\space#1}{\hfill $\blacksquare$}
-\newtheorem{claim}[section]{Claim}
-\newtheorem{lemma}{Lemma}[section]
-\DeclareMathOperator{\lub}{\text{LUB}}
-\DeclareMathOperator{\hcf}{hcf}
-\DeclareMathOperator{\lcm}{lcm}
-\setcounter{MaxMatrixCols}{20}
-\newcommand*\binco[2]{\begin{pmatrix}
-  #1\\#2
-\end{pmatrix}}
-\newcommand{\ih}{\widehat i}
-\newcommand{\jh}{\widehat j}
-\newcommand{\kh}{\widehat k}
-\newcommand{\K}{\mathcal{K}}
-\renewcommand{\vec}{\underline}
-\newcommand{\dv}[1]{\vec #1'}
-\renewcommand{\d}[1]{#1'}
-\renewcommand{\t}{\theta}
-\newenvironment{itpars}{\par\itshape}{\par}
-\newenvironment{itquote}{\begin{quote}\itshape}{\end{quote}\ignorespacesafterend}
+\usepackage{homework-preamble}
+
 \begin{document}
 \title{SVCDE: Hand-in 6}
 \author{Franz Miltz (UNN: S1971811)}
 \date{1 November 2020}
 \maketitle
+
+
 \section*{Question 1}
+
+
 To evaluate
 \begin{align*}
   I=\int_C \left(y\ih - x\jh\right)\cdot d\vec r 
@@ -79,7 +43,11 @@ Inserting this let's us find $I$:
 \begin{align*}
   I = -\frac{3\pi}{2}-1 = -\frac{3\pi + 2}{2}.
 \end{align*}
+
+
 \section*{Question 2}
+
+
 We have the transformation $(u,v,w)\to(x,y,z)$ defined by the equations
 \begin{align}
   \label{eq1}
