--- a/2020_21/SVCDE/H8/homework.tex
+++ b/2020_21/SVCDE/H8/homework.tex
@@ -17,33 +17,42 @@ We want to evaluate
     I = \di_S x^2y^2+y^2z^2+z^2x^2 dS
 \end{align*}
 where $S$ is the surface of the unit sphere around the origin. 
+By the definition of surface integrals, we know that
+\begin{align*}
+    I=\di_S \vec F \cdot \vec{\hat n}\:dS = \di_S \vec F \cdot d\vec S
+\end{align*}
+for some vector field $\vec F$. We know that
+\begin{align*}
+    \vec{\hat n} = x\ih + y\jh + z\kh
+\end{align*}
+by definition of $S$ (centered around the origin and radius $r=1$). 
+Let
+\begin{align*}
+    \vec F = xy^2\ih + yz^2\jh + zx^2\kh.
+\end{align*}
+Then
+\begin{align*}
+    \vec F \cdot \vec{\hat n} = x^2y^2+y^2z^2+z^2x^2
+\end{align*}
+and thus our $\vec F$ is valid.
 We use the \emph{Divergence Theorem} to find
 \begin{align*}
-    I = \ti_E \grad\cdot\vec F\:dV = \ti_E 2xy^2 + 2yz^2 + 2xz^2\:dV
+    I = \di_S \vec F \cdot d\vec S=\ti_E \grad\cdot\vec F\:dV 
+    = \ti_E x^2 + y^2 + z^2\:dV
 \end{align*}
-where $E$ is the unit sphere around the origin. We can insert the limits to get
+where $E$ is the unit sphere around the origin. 
+By using spherical coordinates $(\rho, \theta, \phi)$ and inserting
+the limits we find 
 \begin{align*}
-    I = \int_0^1 \int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}} \int_{-\sqrt{1-x^2-y^2}}^{\sqrt{1-x^2-y^2}}
-    2xy^2 + 2yz^2 + 2zx^2\:dz\,dy\,dx.
+    I = \int_0^{2\pi}\int_0^\pi\int_0^1 r^4\sin\phi\:dr\,d\phi\,d\theta.
 \end{align*}
-By evaluating the inner integral we obtain
+This lets us evaluate $I$ with relative ease:
 \begin{align*}
-    I &= \int_0^1 \int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}}
-    \left[\frac{2}{3}yx^3 + z^2x^2\right]_{-\sqrt{1-x^2-y^2}}^{\sqrt{1-x^2-y^2}}\:dy\,dx\\
-    &= \int_0^1 \int_{-\sqrt{1-x^2}}^{\sqrt{1-x^2}}
-    \frac{4}{3}y(1-x^2-y^2)^{3/2}\: dy\,dx.
+    I &= \int_0^{2\pi}\int_0^\pi \left[\frac{r^5}{5}\sin\phi\right]_0^1\:d\phi\,d\theta
+    = \int_0^{2\pi}\int_0^\pi \frac{\sin\phi}{5}\:d\phi\,d\theta\\
+    &=\int_0^{2\pi} \left[-\frac{\cos\phi}{5}\right]_0^\pi\:d\theta
+    = \int_0^{2\pi} \frac{2}{5}\:d\theta = \frac{4\pi}{5}.
 \end{align*}
-We can now convert this integral to polar coordinates:
-\begin{align*}
-    I &= \int_0^1 \int_0^{2\pi}\frac{4}{3}r^2\sin\theta (1-r^2)^{3/2}\:d\theta\,dr\\
-    &=\int_0^1\left[-\frac{4}{3}r^2\cos\theta(1-r^2)^{3/2}\right]_0^{2\pi}dr
-\end{align*}
-Note that $\theta$ only appears within the cosine. Since $\cos(0)=\cos(2\pi)=1$,
-we know that
-\begin{align*}
-    I = \int_0^1 0\:dr = 0.
-\end{align*}
-
 
 \section*{Question 2}
 
@@ -77,15 +86,16 @@ By inserting (\ref{dydx}) and (\ref{g}) we get
 \end{align*}
 Separating the variables leads us to
 \begin{align*}
-    \frac{1+v^2}{1-v}\frac{dv}{dx} = \frac{1}{x}.
+    \frac{1-v}{1+v^2}\frac{dv}{dx} = \frac{1}{x}.
 \end{align*}
 Integrating both sides w.r.t. $x$ gives
 \begin{align*}
-    \int \frac{1+v^2}{1-v}\:dv &= \int \frac{1}{x}\: dx\\
-    \Leftrightarrow -\frac{v^2}{2}-v-2\ln(v-1) &= \ln(x)+C
+    \int \frac{1-v}{1+v^2}\:dv &= \int \frac{1}{x}\: dx\\
+    \Leftrightarrow \int \frac{1}{1+v^2}\:dv - \int \frac{v}{1+v^2}\:dv &= \int \frac{1}{x}\:dx\\
+    \Leftrightarrow \arctan(v)-\frac{1}{2}\ln(1+v^2)&=\ln(x)+C
 \end{align*}
-By resubstituting $v$, we get the implicit expression
+By resubstituting $v$ and simplifying, we get the implicit expression
 \begin{align*}
-    \ln(x)-2\ln(y-x)-\frac{y^2+2xy}{2x^2} = C.
+        \arctan\left(\frac{y}{x}\right)-\frac{1}{2}\ln\left(x^2+y^2\right)=C.
 \end{align*}
 \end{document}
